# Android-FFmpeg-Player

app/: build.gradle
app/src/androidTest/java/com/example/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: IOSchedule.cpp  IOSchedule.h  Log.h  Mutex.cpp  Mutex.h  NoCpoyable.h  SafeQueue.h  SafeQueueNoLock.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h
app/src/main/cpp/include/libavcodec/: packet.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/include/librtmp/: hashswf.c  rtmp.c  rtmp_sys.h
app/src/main/cpp/include/librtmp/cmake/: compile-librtmp-android.sh
app/src/main/cpp/screenlive/: ScreenLive.cpp  ScreenLive.h
app/src/main/cpp/src/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  Player.cpp  Player.h  PlayerHelper.cpp  PlayerHelper.h  SafeQueueMutex.h  VideoChannel.cpp  VideoChannel.h  main.cpp
app/src/main/java/com/example/player/: MainActivity.kt  ScreenLiveActivity.kt
app/src/main/java/com/example/player/common/: LiveThreadPool.kt  Player.kt  ScreenLive.kt  VideoCodec.kt
app/src/main/java/com/example/player/coroutine/: Coroutines.kt  LoopGet.kt  SafeCoroutineScopes.kt
app/src/main/res/layout/: activity_main.xml  activity_screen_live.xml
app/src/test/java/com/example/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
